src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisample_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisample_StringErrorContext.class */
public final class NVTextureMultisample_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexImage2DMultisampleCoverageNV(IIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        methods.put("glTexImage3DMultisampleCoverageNV(IIIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        methods.put("glTextureImage2DMultisampleNV(IIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        methods.put("glTextureImage3DMultisampleNV(IIIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        methods.put("glTextureImage2DMultisampleCoverageNV(IIIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        methods.put("glTextureImage3DMultisampleCoverageNV(IIIIIIIIZ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTextureMultisampleErrorContext");
        return methods;
    }
}
